fix bug opera (btn z-index)

--- a/styles/Scss/vars.scss
+++ b/styles/Scss/vars.scss
@@ -31,6 +31,7 @@ h1 {
 .btn-block {
   position: relative;
   display: block;
+  z-index: 10;
 }
 .arrow {
   background-color: orangered;
